--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -143,6 +143,7 @@
                 android:layout_margin="10dp">
 
                 <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cardLogOut"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     app:cardCornerRadius="10dp"
@@ -164,7 +165,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sign Out"
+                    android:text="Log Out"
                     android:textColor="@color/black"
                     android:fontFamily="@font/poppins"
                     android:textAlignment="center"
