--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,6 +39,7 @@
                 android:translationY="-8dp"/>
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cardLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="20dp"
