--- a/app/src/main/res/layout/dashboard_current_location_view.xml
+++ b/app/src/main/res/layout/dashboard_current_location_view.xml
@@ -7,6 +7,7 @@
     app:backgroundTint="@color/white">
 
     <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+        android:id="@+id/dragHandle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
