--- a/app/src/main/res/layout/top_garage_item.xml
+++ b/app/src/main/res/layout/top_garage_item.xml
@@ -6,8 +6,8 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/foodListCard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="300dp"
         android:layout_marginBottom="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -18,14 +18,14 @@
         android:backgroundTint="@color/white">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/cardItem"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardElevation="8dp"
                 android:layout_margin="8dp"
@@ -36,10 +36,9 @@
 
                 <ImageView
                     android:id="@+id/imgGarageImage"
-                    android:layout_width="150dp"
+                    android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:src="@mipmap/ic_launcher"
-                    android:alpha=".7"
                     android:scaleType="centerCrop"/>
 
             </com.google.android.material.card.MaterialCardView>
@@ -52,6 +51,8 @@
                 android:fontFamily="@font/poppins_bold"
                 android:text="Garage Name"
                 android:textAlignment="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:textSize="18sp" />
 
             <TextView
@@ -60,8 +61,11 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/poppins"
-                android:text="Garage Description"
+                android:text="Garage Description Garage Description Garage Description"
                 android:textAlignment="center"
+                android:maxLines="3"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:textSize="15sp" />
 
             <RatingBar
@@ -76,7 +80,7 @@
                 android:focusable="false"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_gravity="center"
                 android:clickable="false"/>
