--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main_color">#100D1B</color>
     <color name="blue">#5B2AE5</color>
+    <color name="red">#FF0000</color>
 </resources>
