Add Ratings Option. Now user can rating Garages

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="main_color">#100D1B</color>
     <color name="blue">#5B2AE5</color>
     <color name="red">#FF0000</color>
+    <color name="yellow">#FDCC0D</color>
 </resources>
