--- a/app/src/main/res/layout/rating_dialog.xml
+++ b/app/src/main/res/layout/rating_dialog.xml
@@ -29,6 +29,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/emo_5"
+            android:alpha="0.5"
             android:layout_weight="1"/>
 
         <pl.droidsonroids.gif.GifImageView
@@ -36,6 +37,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/emo_4"
+            android:alpha="0.5"
             android:layout_weight="1"/>
 
         <pl.droidsonroids.gif.GifImageView
@@ -43,6 +45,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/emo_3"
+            android:alpha="0.5"
             android:layout_weight="1"/>
 
         <pl.droidsonroids.gif.GifImageView
@@ -50,6 +53,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/emo_2"
+            android:alpha="0.5"
             android:layout_weight="1"/>
 
         <pl.droidsonroids.gif.GifImageView
@@ -57,6 +61,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/emo_1"
+            android:alpha="0.5"
             android:layout_weight="1"/>
 
     </LinearLayout>
