--- a/app/src/main/res/layout/activity_myprofile.xml
+++ b/app/src/main/res/layout/activity_myprofile.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.ProfileFragment"
-    android:orientation="vertical">
+    tools:context=".Screens.MyProfile">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -197,7 +196,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
-                
+
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -214,7 +213,7 @@
                     android:textSize="15sp"
                     android:layout_marginStart="15dp"
                     android:layout_gravity="center_vertical"/>
-                
+
             </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
