--- a/app/src/main/res/layout/activity_current_location_view.xml
+++ b/app/src/main/res/layout/activity_current_location_view.xml
@@ -88,17 +88,70 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-    <TextView
-        android:id="@+id/txtCurrentLocationText"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Current Location"
-        android:textSize="15sp"
-        android:fontFamily="@font/poppins"
-        android:textColor="@color/black"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_gravity="center"/>
+        android:layout_marginTop="20dp">
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="20dp"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="10dp"
+            android:backgroundTint="@color/white"
+            android:layout_gravity="center"
+            style="@style/Widget.Material3.CardView.Filled">
+
+            <pl.droidsonroids.gif.GifImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/location"
+                android:layout_margin="8dp"/>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center">
+
+            <TextView
+                android:id="@+id/txtCurrentLocationAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Current Address"
+                android:textSize="15sp"
+                android:fontFamily="@font/poppins"
+                android:textColor="@color/black"
+                android:layout_marginEnd="20dp"/>
+
+            <TextView
+                android:id="@+id/txtCurrentLocationCity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Current City"
+                android:textSize="15sp"
+                android:fontFamily="@font/poppins"
+                android:textColor="@color/black"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="20dp"/>
+
+            <TextView
+                android:id="@+id/txtCurrentLocationState"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Current State"
+                android:textSize="15sp"
+                android:fontFamily="@font/poppins"
+                android:textColor="@color/black"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="20dp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
