--- a/app/src/main/res/layout/activity_request_help.xml
+++ b/app/src/main/res/layout/activity_request_help.xml
@@ -107,15 +107,35 @@
                     android:textSize="15sp"
                     android:fontFamily="@font/poppins_semibold"/>
 
-                <TextView
-                    android:id="@+id/txtGarageName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="@color/black"
-                    android:textSize="15sp"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="@font/poppins"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/txtGarageName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textColor="@color/black"
+                        android:textSize="15sp"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/poppins"/>
+
+                    <RatingBar
+                        android:id="@+id/ratingBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        style="@style/Widget.AppCompat.RatingBar.Small"
+                        android:focusable="false"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="5dp"
+                        android:layout_gravity="center"
+                        android:progressTint="@color/yellow"
+                        android:clickable="false"/>
+
+                </RelativeLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
