--- a/app/src/main/res/layout/garage_details_bottom_sheet.xml
+++ b/app/src/main/res/layout/garage_details_bottom_sheet.xml
@@ -72,12 +72,10 @@
                 android:id="@+id/ratingBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:numStars="5"
-                android:rating="3.5"
-                android:stepSize=".5"
                 android:isIndicator="true"
                 android:focusable="false"
                 android:clickable="false"
+                android:progressTint="@color/yellow"
                 android:layout_below="@id/txtGarageWorkingHours"
                 style="@style/Widget.AppCompat.RatingBar.Small"/>
 
