--- a/app/src/main/res/layout/top_garage_item.xml
+++ b/app/src/main/res/layout/top_garage_item.xml
@@ -6,7 +6,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/foodListCard"
-        android:layout_width="180dp"
+        android:layout_width="200dp"
         android:layout_height="300dp"
         android:layout_marginBottom="20dp"
         android:layout_marginStart="10dp"
@@ -20,7 +20,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:orientation="vertical">
 
             <com.google.android.material.card.MaterialCardView
@@ -74,14 +73,11 @@
                 android:layout_height="wrap_content"
                 android:numStars="5"
                 style="@style/Widget.AppCompat.RatingBar.Small"
-                android:rating="3.5"
-                android:stepSize=".5"
                 android:isIndicator="true"
                 android:focusable="false"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:progressTint="@color/yellow"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="5dp"
                 android:layout_gravity="center"
                 android:clickable="false"/>
 
