--- a/app/src/main/res/layout/urgent_request_item.xml
+++ b/app/src/main/res/layout/urgent_request_item.xml
@@ -70,6 +70,7 @@
                             android:text="Urgent Request Description"
                             android:textColor="@color/black"
                             android:textSize="15sp"
+                            android:maxLines="3"
                             android:fontFamily="@font/poppins"
                             android:layout_gravity="center_vertical"
                             android:layout_marginEnd="20dp"/>
