Newly added booking review option

--- a/app/src/main/res/layout/booking_item.xml
+++ b/app/src/main/res/layout/booking_item.xml
@@ -90,6 +90,18 @@
                     android:textColor="@color/black"
                     android:textSize="12sp" />
 
+                <TextView
+                    android:id="@+id/txtBookingNote"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="5dp"
+                    android:fontFamily="@font/poppins"
+                    android:text="Note"
+                    android:visibility="gone"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" />
+
             </LinearLayout>
 
             <com.airbnb.lottie.LottieAnimationView
