--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -239,6 +239,7 @@
                     android:layout_margin="10dp">
 
                     <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/cardNearbyGarage"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         app:cardCornerRadius="10dp"
