--- a/app/src/main/res/layout/top_garage_item.xml
+++ b/app/src/main/res/layout/top_garage_item.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/foodListCard"
+        android:id="@+id/cardGarageItem"
         android:layout_width="200dp"
         android:layout_height="300dp"
         android:layout_marginBottom="20dp"
