--- a/app/src/main/res/layout/activity_garage_view.xml
+++ b/app/src/main/res/layout/activity_garage_view.xml
@@ -128,6 +128,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:numStars="5"
+                            android:stepSize=".5"
                             style="@style/Widget.AppCompat.RatingBar.Small"
                             android:isIndicator="true"
                             android:focusable="false"
