--- a/app/src/main/res/layout/select_garage_dialog.xml
+++ b/app/src/main/res/layout/select_garage_dialog.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <TextView
@@ -62,6 +63,15 @@
 
     </RelativeLayout>
 
+    <com.google.android.material.divider.MaterialDivider
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:dividerThickness="2dp"
+        app:dividerColor="@color/main_color"
+        android:layout_marginTop="20dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -89,6 +99,7 @@
             android:textSize="15sp"
             android:layout_marginTop="5dp"
             android:layout_gravity="center"
+            android:textAlignment="center"
             android:fontFamily="@font/poppins"/>
 
         <TextView
