--- a/app/src/main/res/layout/top_garage_item.xml
+++ b/app/src/main/res/layout/top_garage_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -7,7 +7,7 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardGarageItem"
         android:layout_width="200dp"
-        android:layout_height="300dp"
+        android:layout_height="330dp"
         android:layout_marginBottom="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -17,10 +17,10 @@
         style="@style/Widget.Material3.CardView.Elevated"
         android:backgroundTint="@color/white">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:paddingBottom="10dp">
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/cardItem"
@@ -52,7 +52,9 @@
                 android:textAlignment="center"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_centerInParent="true"
+                android:layout_below="@id/cardItem"/>
 
             <TextView
                 android:id="@+id/txtGarageDescription"
@@ -65,7 +67,9 @@
                 android:maxLines="3"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:layout_centerInParent="true"
+                android:layout_below="@id/txtGarageName"/>
 
             <RatingBar
                 android:id="@+id/ratingBar"
@@ -77,12 +81,12 @@
                 android:focusable="false"
                 android:progressTint="@color/yellow"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_gravity="center"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
                 android:clickable="false"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
-</RelativeLayout>
+</LinearLayout>
