--- a/app/src/main/res/layout/urgent_request_item.xml
+++ b/app/src/main/res/layout/urgent_request_item.xml
@@ -124,12 +124,13 @@
                     android:id="@+id/txtUrgentRequest"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:fontFamily="@font/poppins"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/poppins_semibold"
                     android:text="Urgent"
                     android:textColor="@color/black"
-                    android:textSize="12sp" />
+                    android:textSize="15sp" />
 
             </LinearLayout>
 
